Korrekturen sytemgrenze und bilanz

--- a/latex/kapitel/energiebilanz.tex
+++ b/latex/kapitel/energiebilanz.tex
@@ -1,18 +1,18 @@
 \chapter{Energiebilanz}
 \label{chap:bilanz}
 
-Wir werden die Benötigte Energie und damit den $CO_2$ Ausstoss der Beiden
-Heizungen Anhand der von uns festgelegten Heizleistung von 10 kW.
-Wir nehmen an, dass eine Heizung 2300 Betriebsstunden aufweist
+Wir werden die benötigte Energie und damit den $CO_2$ Ausstoss der beiden
+Heizungen anhand der von uns festgelegten Heizleistung von 10 kW berechnen.
+Wir nehmen an, dass eine Heizung 2300 Betriebsstunden pro Jahr aufweist
 \cite{heizung:heizung}.
 
 \section{Wärmepumpe}
 
-Mit Hilfe des COP berechnen wir die Benötigte Stromleistung bei einer
+Mit Hilfe des COP (Coefficient of performance) berechnen wir die benötigte Stromleistung bei einer
 Aussentemperatur von 6.6 C°.
-Das Ergibt eine Stromleistung 1.95 kW.
+Das ergibt eine Stromleistung von 1.95 kW.
 
-Wir Errechnen anhand des vorher definierten Energiemixes den Gesamtverbrauch
+Wir errechnen anhand des vorher definierten Energiemixes den Gesamtverbrauch
 der Energie um diesen Strom bereitzustellen und den damit einhergehenden $CO_2$
 Ausstoss.
 Wir erhalten 5.46 kW Gesamtverbrauch und 445.5 g $CO_2$.
@@ -22,11 +22,11 @@ Pro Jahr ergibt das 1t $CO_2$ Emissionen und einen Energieverbrauch von 12558 kW
 \section{Ölbrennwertkessel}
 
 Wir betrachten den Wirkungsgrad der Ölheizung.
-Laut Herstellerangaben Liegt dieser bei 97\%.
+Laut Herstellerangaben liegt dieser bei 97\%.
 Damit kommen wir auf einen Bedarf von 10.3 kW.
 Nun beziehen wir noch die Produktionsenergie für das ÖL mit ein und erhalten
 insgesamt 33.99 kW.
-Der $CO_2$ Ausstoss liegt bei 290 g CO2 pro kwh.\cite{heizung:co2vergleich}
+Der $CO_2$ Ausstoss liegt bei 290 g $CO_2$ pro kwh.\cite{heizung:co2vergleich}
 das Ergibt uns einen $CO_2$ Ausstoss von 9857 g.
 
 Pro Jahr ergibt das 22,7 t $CO_2$ und einem Energiebedarf von 78177 kWh.
@@ -38,7 +38,7 @@ Wenn wir die beiden Systeme direkt miteinander vergleichen, sehen wir dass,
 wie erwartet, die Wärmepumpe gegenüber der Ölheizung
 sowohl im Energieverbrauch sowie im Ausstoss von Treibhausgas besser abschneidet.
 
-In der Folgenden Tabelle sehen Wir den Vergleich Zusammengefasst.
+In der Folgenden Tabelle sehen wir den Vergleich zusammengefasst.
 
 \begin{table}
 \begin{center}
@@ -57,25 +57,22 @@ In der Folgenden Tabelle sehen Wir den Vergleich Zusammengefasst.
 \caption{Direktvergleich Energiebilanz der Heizungen}
 \end{table}
 
-Wir sehen, dass die Solewasserwärme Pumpe massiv besser abschneidet.
+Wir sehen, dass die Sole-Wasser Wärmepumpe massiv besser abschneidet.
 Während der Energiebedarf etwa nur noch einem Sechstel entspricht konnte
 der $CO_2$ Ausstoss massiv auf etwa einen Dreiundzwanzigstel reduziert werden.
 
-Wir denken, das sich wie folgt erklären lässt.
-Zum einen Bezieht die Wärmepumpe den Hauptanteil, etwa Drei Viertel, der Benötigten Energie
+Wir denken, das sich dies wie folgt erklären lässt.
+Zum einen bezieht die Wärmepumpe den Hauptanteil, etwa drei Viertel, der benötigten Energie
 aus der Erdwärme \cite{junkers:funktionwarmepumpe}.
-Das heisst das der Reale Energieverbrauch bei etwa 50000 kWh
-pro Jahr läge. Das ist immer noch Energiesparender als eine Ölheizung und
-zu beachten ist, das die Erdwärme als natürliche Energiequelle frei vorhanden
-und erneuerbar zur Verfügung steht.
+Das heisst, dass der reale Energieverbrauch bei etwa 50000 kWh pro Jahr läge. Das ist immer noch energiesparender als eine Ölheizung und zu beachten ist, das die Erdwärme als natürliche Energiequelle frei vorhanden und erneuerbar zur Verfügung steht.
 
 Zum anderen denken wir, das der herkömmliche Schweizer Strommix im grossen und
-ganzen relativ Nachhaltig ist. Das liegt daran das der Strom zu einem Grossteil
+ganzen relativ nachhaltig ist. Das liegt daran das der Strom zu einem Grossteil
 aus Wasserkraft gewonnen wird \cite{bafu:strommix}.
 Atomstrom wird zum Teil produziert und importiert, dieser verursacht zwar kein
 $CO_2$ gilt aber als nicht nachhaltig, da der Atommüll verehrende Folgen
 nach sich zieht.
 Der Anteil an Atomstrom ist in den letzten Jahren gesunken.
 
-Somit wird es Energietechnisch und bezogen auf die Umwelt immer sinnvoller
+Somit wird es energietechnisch und bezogen auf die Umwelt immer sinnvoller
 Heizsysteme als Wärmepumpe zu realisieren.
