korrekturen und layout

--- a/latex/anhang/projektskizeanhang.tex
+++ b/latex/anhang/projektskizeanhang.tex
@@ -1,4 +1,4 @@
-\chapter{Projektskize}
-\label{chap:projectskize}
+\addtocounter{chapter}{1}
+\addcontentsline{toc}{chapter}{\protect\numberline{\thechapter}Projektskizze}
 
 \includepdf{anhang/projekt_skize.pdf}
