--- a/latex/kapitel/systemgrenze.tex
+++ b/latex/kapitel/systemgrenze.tex
@@ -13,7 +13,7 @@ Unser Modell besteht aus einem System, in das Ressourcen eingeführt werden
 (Input) und das daraus eine Nutzeinheit produziert, die aus dem System gewonnen
 wird (Output).
 
-\section{das System}
+\section{Das System}
 
 Wir betrachten in unserer Arbeit ein Heizsystem in Form einer
 Sole-Wasser Wärmepumpe und als Vergleichssystem eine Heizung mit
