ajusted personal reflexion

--- a/latex/anhang/reflexion.tex
+++ b/latex/anhang/reflexion.tex
@@ -1,26 +1,25 @@
 \chapter{Persönliche Reflexion}
 \label{chap:reflexion}
 
-\subsection{Stefan Andonie}
+\section{Stefan Andonie}
 
-TODO: Nur von deiner Sicht aus beschreiben
-
-Das Miniprojekt hat uns einen Einblick gegeben in die Methoden und Begriffe
+Das Miniprojekt hat mir einen Einblick gegeben in die Methoden und Begriffe
 der Nachhaltigkeit.
-Im Umfang des Moduls Nachhaltigkeit in den Ingenieurwissenschaften haben wir
-einiges Neues gelernt und konnten eine einige interessante Aspekte anhand
+Im Umfang des Moduls Nachhaltigkeit in den Ingenieurwissenschaften haben ich
+einiges Neues gelernt und konnte einige interessante Aspekte anhand
 des Beispiels von Heizungssystemen genauer betrachten.
 Für uns Informatiker war es spannend ein solches System zu betrachten, da wir
 ansonsten eher mit Virtuellen Gütern umgehen.
-Wir waren uns daher zum Teil nicht so sicher wie wir die verschiedenen Methoden
-anwenden sollen, zumal die Heizungsbranche ihr eigene Fachsprache hat.
+Zumal die Heizungsbranche ihr eigene Fachsprache hat und mir das Thema ziemlich
+unbekant war, war für mich am Anfang nicht ganz klar welche Aspekte am
+wichtigsten sind und was man am besten vergleichen sollte.
 Bei der Energiebilanz haben wir mehrfach das Vorgehen gewechselt.
-Zum Schluss hat es uns vor allem geholfen das System einzugrenzen und zu
+Zum Schluss hat es uns, wie ich denke, sehr geholfen das System einzugrenzen und zu
 vereinfachen.
-Rückblickend können wir festhalten, dass es mithilfe der verschiedenen Methoden
+Rückblickend möchte ich festhalten, dass es mithilfe der verschiedenen Methoden
 gelungen ist, eine einigermassen Zutreffende Aussage zu machen.
 
-\subsection{Pascal Grüter}
+\section{Pascal Grüter}
 
 Ich habe bei mir zuhause eine Erdwärmepumpe und es interessierte mich, ob diese Art Heizungssystem überhaupt nachhaltig ist. Durch diese Arbeit habe ich mehr erfahren über die Deklaration von Heizungen, ihrer Funktionsweise und der Nachhaltigkeit von Ölheizungen und Wärmepumpen.
 
