--- a/latex/vorspann/management_summary.tex
+++ b/latex/vorspann/management_summary.tex
@@ -1,4 +1,27 @@
-\chapter*{Management Summary}
-\label{chap:managementSummary}
+\chapter*{Zusammenfassung}
+\label{chap:zusammenfassung}
 
-Zusammenfassung
+Im Rahmen des Moduls Nachhaltigkeit in den Ingenieurwissenschaften wurde eine
+Nachhaltigkeitsanalyse für Heizsysteme erstellt.
+Wir haben dafür zwei verschiedene Heizsysteme des Anbieters Junkers ausgewählt.
+Zum einen die Solewassererdwärmepumpe STM 100-1 als aktuelle Technologie.
+Und als Vergleichsystem und bisherige Technologie den Ölbrennwertkessel KUB 19-4. 
+
+Wir bauen die Analyse schrittweise mit den Entsprechenden Methoden auf und
+Daraus eine Schlussfolgerung zu Ziehen.
+
+Mit einer SWOT-Analyse betrachten wir als erstes die qualitativen Stärken und
+Schwächen der beiden Systeme. Wobei wir schon einige Nachteile der Ölheizung
+identifiziert haben.
+
+Danach können wir mithilfe der Nachhaltikeitsrosette die qualitativen Merkmale
+der beiden Systeme subjektiv erfassen und direkt Miteinander vergleichen.
+Wir sehen wo die Wärmepumpe gegenüber der Ölheizung noch aufholbedarf hat.
+Jedoch in den Meisten Aspekten eine Bessere Leistung erbringt.
+
+Zum Schluss Erstellen wir für beide Systeme eine Energiebilanz.
+Wir betrachten den Energieverbrauch während eines Betriebsjahres und den
+damit einhergehenden Ausstoss von Treibhausgas.
+Die Resultate diese quantitative Methode sagen objektiv aus welches System
+Energiesparender und Umweltfreundlicher ist.
+Wiederum schneidet die Wärmepumpe hier besser ab.
