changed managment summary to zusammenfassung

--- a/latex/miniprojekt_waermepumpe.tex
+++ b/latex/miniprojekt_waermepumpe.tex
@@ -161,7 +161,7 @@
 \cleardoublepage
 \setcounter{page}{1}
 \phantomsection 
-\addcontentsline{toc}{chapter}{Management Summary}
+\addcontentsline{toc}{chapter}{Zusammenfassung}
 \include{vorspann/management_summary}
 \clearpage
 %---------------------------------------------------------------------------
