--- a/latex/kapitel/rosette.tex
+++ b/latex/kapitel/rosette.tex
@@ -8,7 +8,7 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
 \section{Bewertung}
 
 \begin{figure}[h]
-\includegraphics[scale=0.54]{bilder/Rosette.png}
+\includegraphics[scale=0.55]{bilder/Rosette.png}
 \caption{Nachhaltigkeitsrosette}
 \end{figure}
 
@@ -62,7 +62,7 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
 \caption{Kriterien für Nachhaltigkeitsrosette}
 \end{table}
 
-\subsection{Erklärungen}
+\section{Erklärungen}
 
 \begin{itemize}
 
