--- a/latex/kapitel/swot.tex
+++ b/latex/kapitel/swot.tex
@@ -56,6 +56,7 @@ In Zukunft können die Wärmepumpen sicher noch an Effizienz gewinnen. In Verbin
 
 Die Wärmepumpe benötigt vor allem Strom für den Betrieb. Dadurch sind die Betriebskosten sehr abhängig vom Strompreis. 
 
+\newpage
 
 \section{Ölheizung}
 
