--- a/latex/miniprojekt_waermepumpe.tex
+++ b/latex/miniprojekt_waermepumpe.tex
@@ -209,11 +209,11 @@
 
 % Glossary
 %---------------------------------------------------------------------------
-\cleardoublepage
-\phantomsection 
-\addcontentsline{toc}{chapter}{Glossar}
-\renewcommand{\glossaryname}{Glossar}
-\printglossary
+%\cleardoublepage
+%\phantomsection 
+%\addcontentsline{toc}{chapter}{Glossar}
+%\renewcommand{\glossaryname}{Glossar}
+%\printglossary
 %---------------------------------------------------------------------------
 
 % Bibliography
