--- a/latex/vorspann/management_summary.tex
+++ b/latex/vorspann/management_summary.tex
@@ -1,4 +1,8 @@
 \chapter*{Management Summary}
 \label{chap:managementSummary}
 
-Zusammenfassung
+Im Rahmen des Moduls \glqq Nachhaltigkeit in den Ingenieurswissenschaften\grqq{} haben wir zum Thema Wärmepumpe eine Nachhaltigkeitsanalyse des Energieverbrauchs erstellt. Dabei liegt der Fokus auf der Erdwärmepumpe, welche mit einem Erdwärmekreislauf Wärme aus bis zu 30-50 Meter Tiefe holt.
+
+Dieses System wurde zum Vergleich einem Ölbrennwertkessel gegenübergestellt und in verschiedenen Kriterien bewertet. Für beide Systeme haben wir eine SWOT-Analyse, eine Nachhaltigkeitsrosette und eine Energiebilanz für den Betrieb erstellt.
+
+Das ganze Mini-Projekt wird abgeschlossen mit einer Schlussfolgerung und einer persönlichen Reflexion.
