--- a/latex/kapitel/einleitung.tex
+++ b/latex/kapitel/einleitung.tex
@@ -1,10 +1,18 @@
 \chapter{Einleitung}
 \label{chap:einleitung}
 
-In diesem Projekt untersuchen wir anhand zwei Heizungsmodellen von Junkers\cite{junkers:home} die Nachhaltigkeit einer Solewasserwärmepumpe. \\
+Nachhaltigkeit ist seit vielen Jahren in den meisten grösseren Firmen ein wichtiges Thema. Auf der Erde leben immer mehr Menschen und Ressourcen wie Erdöl oder Erze sind begrenzt. Darum stellt sich bei einem Produkt oder Prozess immer mehr die Frage, wie es zu einem abgeschlossenen System gebaut werden kann, welches über lange Zeit funktionsfähig ist und die Umwelt nicht belastet.
+
+In diesem Projekt wird diese Frage des abgeschlossenen Kreislaufs bei der Technologie der Wärmepumpe untersucht. Dabei untersuchen wir anhand zwei Heizungsmodellen von Junkers\cite{junkers:home} die Nachhaltigkeit einer Sole-Wasser Wärmepumpe. \\
 Als Referenz für die Wärmepumpe nehmen wir die STM 100-1\cite{junkers:stm-100-1}. Für den Ölbrennwertkessel benutzen wir den KUB 19-4 \cite{junkers:kub-19-4}.
 
-Wir werden die Nachhaltigkeit dieser zwei Systeme untersuchen und aufzeigen was alles für den Betrieb notwendig ist. Jedoch können wir die Herstellung und Montage der Heizungen nicht miteinbeziehen, da dies nicht im Rahmen dieses Projekts machbar ist.
+Dabei wird auf die benötigten Ressourcen eingegangen, welche für den Betrieb dieser Systeme notwendig ist. Auch werden die Emissionen beider Systeme berücksichtigt und wirtschaftliche und soziale Aspekte.
+Jedoch können wir die Herstellung und Montage der Heizungen nicht miteinbeziehen, da dies nicht im Rahmen dieses Projekts machbar ist.
+
+Zuerst wird nun eine SWOT-Analyse beider Systeme erstellt, damit wir nachfolgend eine Nachhaltigkeitsrosette aufzeichnen können.
+
+
+
 
 
 
