--- a/latex/miniprojekt_waermepumpe.tex
+++ b/latex/miniprojekt_waermepumpe.tex
@@ -76,8 +76,8 @@
 	bookmarksopen = {true},               % opens the bar on the left side
 	bookmarksopenlevel = {0},             % depth of opened bookmarks
 	pdftitle = {Waermepumpe vs Oelbrennwertkessel},	   	% PDF-property
-	pdfauthor = {brd3},        					  % PDF-property
-	pdfsubject = {LaTeX Template},        % PDF-property
+	pdfauthor = {grutp1},        					  % PDF-property
+	pdfsubject = {Mini-Projekt},        % PDF-property
 	linkcolor = {linkcolor},              % Color of Links
 	citecolor = {linkcolor},              % Color of Cite-Links
 	urlcolor = {linkcolor},               % Color of URLs
@@ -125,6 +125,7 @@
 % Intro:
 %---------------------------------------------------------------------------
 \begin{document}                              	% Start Document
+\color{black}\selectfont
 \settocdepth{section}														% Set depth of toc
 \pagenumbering{roman}														
 %---------------------------------------------------------------------------
@@ -161,7 +162,7 @@
 \cleardoublepage
 \setcounter{page}{1}
 \phantomsection 
-\addcontentsline{toc}{chapter}{Zusammenfassung}
+\addcontentsline{toc}{chapter}{Management Summary}
 \include{vorspann/management_summary}
 \clearpage
 %---------------------------------------------------------------------------
