--- a/latex/anhang/reflexion.tex
+++ b/latex/anhang/reflexion.tex
@@ -17,7 +17,7 @@ Bei der Energiebilanz haben wir mehrfach das Vorgehen gewechselt.
 Zum Schluss hat es uns, wie ich denke, sehr geholfen das System einzugrenzen und zu
 vereinfachen.
 Rückblickend möchte ich festhalten, dass es mithilfe der verschiedenen Methoden
-gelungen ist, eine einigermassen Zutreffende Aussage zu machen.
+gelungen ist, eine einigermassen zutreffende Aussage zu machen.
 
 \section{Pascal Grüter}
 
