--- a/latex/vorspann/management_summary.tex
+++ b/latex/vorspann/management_summary.tex
@@ -14,7 +14,7 @@ Schwächen der beiden Systeme. Wobei hier schon einige Nachteile der Ölheizung
 deutlich werden.
 
 Danach können wir mithilfe der Nachhaltikeitsrosette die qualitativen Merkmale
-der beiden Systeme subjektiv erfassen und direkt ,iteinander vergleichen.
+der beiden Systeme subjektiv erfassen und direkt miteinander vergleichen.
 Wir sehen wo die Wärmepumpe gegenüber der Ölheizung noch Aufholbedarf hat.
 
 Zum Schluss erstellen wir für beide Systeme eine Energiebilanz.
