--- a/latex/miniprojekt_waermepumpe.tex
+++ b/latex/miniprojekt_waermepumpe.tex
@@ -162,7 +162,7 @@
 \cleardoublepage
 \setcounter{page}{1}
 \phantomsection 
-\addcontentsline{toc}{chapter}{Management Summary}
+\addcontentsline{toc}{chapter}{Zusammnefassung}
 \include{vorspann/management_summary}
 \clearpage
 %---------------------------------------------------------------------------
