--- a/latex/kapitel/einleitung.tex
+++ b/latex/kapitel/einleitung.tex
@@ -6,7 +6,7 @@ Nachhaltigkeit ist seit vielen Jahren in den meisten grösseren Firmen ein wicht
 In diesem Projekt wird diese Frage des abgeschlossenen Kreislaufs bei der Technologie der Wärmepumpe untersucht. Dabei untersuchen wir anhand zwei Heizungsmodellen von Junkers\cite{junkers:home} die Nachhaltigkeit einer Sole-Wasser Wärmepumpe. \\
 Als Referenz für die Wärmepumpe nehmen wir die STM 100-1\cite{junkers:stm-100-1}. Für den Ölbrennwertkessel benutzen wir den KUB 19-4 \cite{junkers:kub-19-4}.
 
-Dabei wird auf die benötigten Ressourcen eingegangen, welche für den Betrieb dieser Systeme notwendig ist. Auch werden die Emissionen beider Systeme berücksichtigt und wirtschaftliche und soziale Aspekte.
+Dabei wird auf die benötigten Ressourcen eingegangen, welche für den Betrieb dieser Systeme notwendig ist. Auch werden die Emissionen beider Systeme berücksichtigt und es wird auf wirtschaftliche und soziale Aspekte eingegangen.
 Jedoch können wir die Herstellung und Montage der Heizungen nicht miteinbeziehen, da dies nicht im Rahmen dieses Projekts machbar ist.
 
 Zuerst wird nun eine SWOT-Analyse beider Systeme erstellt, damit wir nachfolgend eine Nachhaltigkeitsrosette aufzeichnen können.
