--- a/latex/kapitel/energiebilanz.tex
+++ b/latex/kapitel/energiebilanz.tex
@@ -24,28 +24,28 @@ Pro Jahr ergibt das 1t $CO_2$ Emissionen und einen Energieverbrauch von 12558 kW
 Wir betrachten den Wirkungsgrad der Ölheizung.
 Laut Herstellerangaben liegt dieser bei 97\%.
 Damit kommen wir auf einen Bedarf von 10.3 kW.
-Nun beziehen wir noch die Produktionsenergie für das ÖL mit ein und erhalten
+Nun beziehen wir noch die Produktionsenergie für das Öl mit ein und erhalten
 insgesamt 33.99 kW.
 Der $CO_2$ Ausstoss liegt bei 290 g $CO_2$ pro kwh.\cite{heizung:co2vergleich}
-das Ergibt uns einen $CO_2$ Ausstoss von 9857 g.
+das ergibt uns einen $CO_2$ Ausstoss von 9857 g.
 
 Pro Jahr ergibt das 22,7 t $CO_2$ und einem Energiebedarf von 78177 kWh.
 
 
 \section{Vergleich}
 
-Wenn wir die beiden Systeme direkt miteinander vergleichen, sehen wir dass,
-wie erwartet, die Wärmepumpe gegenüber der Ölheizung
-sowohl im Energieverbrauch sowie im Ausstoss von Treibhausgas besser abschneidet.
+Wenn wir die beiden Systeme direkt miteinander vergleichen, sehen wir, dass
+wie erwartet die Wärmepumpe gegenüber der Ölheizung
+sowohl im Energieverbrauch wie auch im Ausstoss von Treibhausgasen besser abschneidet.
 
-In der Folgenden Tabelle sehen wir den Vergleich zusammengefasst.
+In der folgenden Tabelle \ref{bilanz:vergleich} sehen wir den Vergleich zusammengefasst.
 
 \begin{table}
 \begin{center}
 \begin{tabular}{|l|l|l|}
 
 \hline
-  System   & Energie Verbrauch kWh pro jahr & $CO_2$ Ausstoss in t pro Jahr\\
+  System   & Energieverbrauch in kWh pro jahr & $CO_2$ Ausstoss in t pro Jahr\\
 \hline
  Ölbrenwertkessel KUB 19-4           & 78177 & 22,7 \\
 \hline
