--- a/latex/kapitel/fazit.tex
+++ b/latex/kapitel/fazit.tex
@@ -10,12 +10,12 @@ produziert und auch weniger Energie für den Betrieb verbraucht.
 Obwohl die Ölheiztechnik eine sehr hohe Effizienz aufweist und
 als bewährte Technik gilt, die eine lange Entwicklung hinter sich hat und
 obwohl Heizöl eine sehr hohe Energiedichte aufweist.
-Erstaunlicher weise wird auch das produzieren von Strom (in bestimmten Ländern)
+Erstaunlicherweise wird auch das produzieren von Strom (in bestimmten Ländern)
 immer nachhaltiger.
 
 Die Nachteile die sie gegenüber dem Ölbrennwertkessel aufweist, liegt
 in der Lärmemission die von dem Kompressor der Wärmepumpe verursacht wird
 und der geringeren Vorlauftemperatur. Auch die hohen Montagekosten der Wärmepumpe können abschreckend wirken. Jedoch wird das durch die niedrigen Betriebskosten wieder ausgeglichen.
 
-Durch du flexiblere Vorlauftemperatur ist der Ölbrennwertkessel flexibler einsetzbar.
-Dies spielt aber eine untergeordnete Rolle, da moderne Häuser sehr gut isoliert werden und meistens auch Bodenheizschlaufen besitzen. Dadurch ist eine hohe Vorlauftemperatur gar nicht nötig. Auch wurde bei den neueren Wärmepumpen die Vorlauftemperatur verbessert und mit noch besserer Technik, sollte dieser Unterschied zur Ölheizung nur noch sehr klein sein.
+Durch die flexibleren Vorlauftemperaturen ist der Ölbrennwertkessel in einem grösseren Gebäudesegment einsetzbar.
+Dies spielt aber eine untergeordnete Rolle, da moderne Häuser sehr gut isoliert werden und meistens auch Bodenheizschlaufen besitzen. Dadurch ist eine hohe Vorlauftemperatur gar nicht nötig. Auch wurde bei den neueren Wärmepumpen die Vorlauftemperatur verbessert und mit noch besserer Technik sollte dieser Unterschied zur Ölheizung nur noch sehr klein werden.
