--- a/latex/kapitel/rosette.tex
+++ b/latex/kapitel/rosette.tex
@@ -74,7 +74,7 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
 
 \item \textbf{Lebensdauer}: Wärmepumpen haben eine Lebensdauer von 15-20 Jahren \cite{fws:faq}. Bei den Ölbrennwertkesseln rechnet man mit 20-25 Jahren\cite{offerten24:oel}.
 
-\item \textbf{Preis}: Für eine Ölheizung muss mit etwa 15'000 CHF{offerten24:oel} gerechnet werden. Bei einer Wärmepumpe betragen die Installationskosten etwa 35'000 CHF.{offerten24:wp}
+\item \textbf{Preis}: Für eine Ölheizung muss mit etwa 15'000 CHF\cite{offerten24:oel} gerechnet werden. Bei einer Wärmepumpe betragen die Installationskosten etwa 35'000 CHF.\cite{offerten24:wp}
 
 \item \textbf{Montagekosten}: Ölheizung im Vorteil, da die Wärmepumpe aufwändige Bohrungen benötigt.
 
