--- a/latex/kapitel/swot.tex
+++ b/latex/kapitel/swot.tex
@@ -1,6 +1,8 @@
 \chapter{SWOT Analyse}
 \label{chap:swot}
 
+Für einen ersten Überblick der beiden Systeme, haben wir für beide Systeme eine SWOT Analyse durchgeführt und sind zu den folgenden Ergebnissen gekommen.
+
 \section{Wärmepumpe}
 
 
@@ -49,10 +51,9 @@
 
 Durch den Erdwärmekreislauf benötigt die Wärmepumpe für den Betrieb wenig Energie. Auch werden dadurch keine Schadstoffe während des Betriebs freigesetzt und keine fossilen Ressourcen wie z.B Öl gebraucht.
 
-Diese Vorteile sind aber mit gewissen Kosten verbunden. Die Montage ist sehr aufwändig und nicht Überall möglich, da ziemlich tiefe Bohrungen durchgeführt werden müssen. Auch sind Wä
-rmepumpen erst wirklich effizient, wenn das Haus eine Fussbodenheizung besitzt. Dies hängt mit der eher niedrigen Vorlauftemperatur der Wärmepumpen zusammen.
+Diese Vorteile sind aber mit gewissen Kosten verbunden. Die Montage ist sehr aufwändig und nicht überall möglich, da ziemlich tiefe Bohrungen durchgeführt werden müssen. Auch sind Wärmepumpen erst wirklich effizient, wenn das Haus eine Fussbodenheizung besitzt. Dies hängt mit der eher niedrigen Vorlauftemperatur der Wärmepumpen zusammen.
 
-In Zukunft können die Wärmepumpen sicher noch an Effizienz gewinnen. In Verbindung mit Solarzellen kann ein autonomes Heizungssystem entwickelt werden.
+In Zukunft können die Wärmepumpen sicher noch an Effizienz gewinnen. In Verbindung mit Solarzellen, oder anderer nachhaltiger Stromgewinnung, kann ein autonomes Heizungssystem entwickelt werden.
 
 Die Wärmepumpe benötigt vor allem Strom für den Betrieb. Dadurch sind die Betriebskosten sehr abhängig vom Strompreis. 
 
@@ -102,10 +103,10 @@ Die Wärmepumpe benötigt vor allem Strom für den Betrieb. Dadurch sind die Bet
 \subsection{Erklärungen}
 
 Ölheizungen können mit sehr hohen und variablen Vorlaufstemperaturen betrieben werden. Dadurch eignen sie sich auch für ältere Gebäude. 
-Auch die Montage ist der Heizung ist eher einfach. Es wird lediglich genügend Platz für den Öltank benötigt.
+Auch die Montage der Heizung ist eher einfach. Es wird lediglich genügend Platz für den Öltank benötigt.
 
 Der grösste Nachteil ist ganz klar der Verbrauch von Öl und der Ausstoss von Schadstoffen. Zusätzlich wird die ganze Heizleistung aus der Ölverbrennung gewonnen.
-Dadurch sind die Betriebskosten sind stark abhängig von dem Ölpreis.
+Dadurch sind die Betriebskosten stark abhängig von dem Ölpreis.
 Die Heizung ist aber eher ein Auslaufmodell, da nicht unendlich Öl auf der Erde zur Verfügung steht.
 
 Durch neue Technologien wie der Wärmepumpe oder der Solarwärme, wird die Ölheizung langsam verdrängt werden. Spätestens dann, wenn das Öl knapp wird und im Preis steigt.
