--- a/latex/kapitel/systemgrenze.tex
+++ b/latex/kapitel/systemgrenze.tex
@@ -1,8 +1,8 @@
 \chapter{Systemgrenze}
 \label{chap:Systemgrenze}
 
-Die Definition einer Systemgrenze dient dazu das System auf die wesentlichen
-Punkte zu reduzieren die untersucht werden sollen und die Analyse in einem
+Die Definition einer Systemgrenze dient dazu, das System auf die wesentlichen
+Punkte zu reduzieren, die untersucht werden sollen und die Analyse in einem
 überschaubaren Rahmen zuhalten.
 Dazu müssen Annahmen getroffen werden und Vereinfachungen gemacht werden.
 Die Aussagekraft des Resultates hängt stark damit zusammen wie diese getroffen
@@ -45,10 +45,10 @@ vom Anbieter bezogen wird.
 
 Ein Ölbrennwertkessel bezieht seine Energie in Form von Heizöl.
 Wir können den Energieinput dadurch berechnen indem wir den Literverbrauch
-ansehen und die Energiedichte eines Liter Öls somit haben wir den
+ansehen und die Energiedichte eines Liter Öls. Somit haben wir den
 Energieinput in kWH pro Jahr erfasst.
 Die benötigte Energie für die Bereitstellung einer Menge Heizöl extraleicht
-wird als Vernachlässigbar angenommen. Da auch keine Klaren Angaben gefunden
+wird als vernachlässigbar angenommen. Da auch keine klaren Angaben gefunden
 werden.
 
 Die Energie, welche bei der Herstellung und bei der Montage der Systeme
@@ -65,7 +65,7 @@ Zeitraum verteilen.
 Als Output haben wir die Wärmeleistung eines Gerätes, genauer gesagt die
 Nennwärmeleistung.
 
-Die Nennwärmeleistung ist die nach Abzug von Verlusten tatsächlich nutzbare
+Die Nennwärmeleistung ist die, nach Abzug von Verlusten, tatsächlich nutzbare
 Energie pro Zeit in kW.\cite{heizung:nennwarmeleistung}
 
 Eine Heizung ist ein Wasserkreislauf der mit einer bestimmten Temperatur
