--- a/latex/kapitel/energiebilanz.tex
+++ b/latex/kapitel/energiebilanz.tex
@@ -38,7 +38,7 @@ Wenn wir die beiden Systeme direkt miteinander vergleichen, sehen wir, dass
 wie erwartet die Wärmepumpe gegenüber der Ölheizung
 sowohl im Energieverbrauch wie auch im Ausstoss von Treibhausgasen besser abschneidet.
 
-In der folgenden Tabelle \ref{bilanz:vergleich} sehen wir den Vergleich zusammengefasst.
+In der folgenden Tabelle sehen wir den Vergleich zusammengefasst.
 
 \begin{table}
 \begin{center}
